# xiaodangjia

./: LICENSE  index.html  package-lock.json  package.json  vite.config.ts
coverage/: appStore.ts.html  coverage-final.json  index.html
docs/: README.md  ai-progress.md  architecture.md  design-flaws.md  srs.md
docs/api/: database.md  index.md
docs/architecture/: model-design.md  system-design.md
docs/data/: standards.md
docs/deployment/: index.md
docs/testing/: ai-report.md  test-cases.md
docs/user/: index.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ast_parser.rs  db.rs  lib.rs  main.rs  plugin_system.rs  semantic_embedding.rs  semantic_search.rs  tfidf.rs  watcher.rs
src-tauri/src/analysis/: mod.rs  relations.rs  search.rs  similarity.rs  tags.rs
src/components/Canvas/: BatchToolbar.tsx  Canvas.tsx  FileNode.tsx  index.ts
src/components/Sidebar/: BackupPanel.tsx  FavoritesTagsPanel.tsx  FileTree.tsx  ProjectCreator.tsx  ProjectList.tsx  SearchFilterPanel.tsx  Sidebar.tsx  StatsPanel.tsx  index.ts
src/components/Viewer/: ViewerPanel.tsx  index.ts
src/components/common/: DarkModeToggle.tsx  TabBar.tsx  index.ts
src/services/: api.ts
src/stores/: appStore.test.ts  appStore.ts
src/types/: index.ts
