[package]
name = "xiaodangjia-temp"
version = "0.1.0"
description = "小当家 - 脑图式文件管理器"
authors = ["you"]
edition = "2021"

[lib]
name = "xiaodangjia_temp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
notify = "7"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
regex = "1"
once_cell = "1"
similar = "2"
trash = "5"
